--- a/templates/editor.html
+++ b/templates/editor.html
@@ -14,7 +14,7 @@
   
   <div id="placeholder"></div>
 
-  <script type_model="text/javascript" src="{{ onlyoffice_public_url }}/documents/api.js"></script>
+  <script type_model="text/javascript" src="{{ onlyoffice_public_url }}/web-apps/apps/api/documents/api.js"></script>
   
   <script type_model="text/javascript">
     // This 'config' object is passed securely from your Flask backend
